examples/test/testpolicy3476.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3476
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key7: value29
      key27: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value17
          key17: value42
          key38: value6
      podSelector:
        matchLabels:
          key24: value13
          key6: value30
